[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/music/title_screen_and_outside_ship_music_watery_ambiance_ogg.ogg" type="AudioStream" id=1]
[ext_resource path="res://Sound.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/opening_vent_sfx.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/monster_attack_sfx.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/monster_nearby_sfx.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/test_click_ogg.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sfx/vault_open_sfx.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sfx/arm_break_sfx.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sfx/eyeball_squish_sfx.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/sfx/door_locked_sfx.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sfx/coin_pickup_sfx.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sfx/fire_in_furnace_sfx.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/sfx/fire_pickup_sfx.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/music/inside_ship_background_music_ogg.ogg" type="AudioStream" id=14]

[node name="Sound" type="Node2D"]
script = ExtResource( 2 )

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="Tween" type="Tween" parent="."]

[node name="arm_break" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="coin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="door_lock" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="eye_squish" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="fire_furnace" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="fire_pick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="monster_atk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="monster_near" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="open_vent" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="test_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="vault_open" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
